# new_task

./: .env.example  Makefile  README.md  pyproject.toml
app/: pytest.ini  start.sh
app/application/api/: main.py
app/application/api/v1/: handlers.py
app/core/: config.py
app/infra/kafka/: kafka.py
app/migrations/: env.py
app/migrations/versions/: 16c8eccdad58_add_migrations.py  36764abb9ec2_add_migrations.py  58f5926c68ff_add_migrations.py  6114c6ab9e59_add_migrations.py  78b64005700e_add_migrations.py  9a851080b2cd_add_migrations.py  d459b52e9f53_add_migrations.py
app/models/: entities.py
app/schemas/: app_schemas.py
app/services/: app_serivces.py
app/tests/: test_api.py
docker_compose/: kafka.yaml
